# ocrtxt

./: .gitignore  DEPLOYMENT.md  ENHANCEMENTS.md  README.md  pyproject.toml  receipt_data.csv  requirements.txt  setup_github.sh  streamlit_app.py
data/: 9123_volume_d_expenditure_codes_2021-22.xlsx
scripts/: lcf_receipt_entry_streamlit.py
src/scannerai/: __init__.py
src/scannerai/_config/: config.py  config.txt  scannerai_config.txt
src/scannerai/classifiers/: __init__.py  lcf_classify.py
src/scannerai/classifiers/trainedModels/: encoder.pkl
src/scannerai/ocr/: lcf_receipt_process_gemini.py  lcf_receipt_process_gpt4vision.py  lcf_receipt_process_mistral.py  lcf_receipt_process_openai.py
src/scannerai/utils/: data_validator.py  image_enhancer.py  scanner_utils.py
